--- a/public/produtos/product-list.html
+++ b/public/produtos/product-list.html
@@ -300,7 +300,7 @@
 
     <!-- Update the script section to remove localStorage references -->
     <script>
-        const MASTER_URL = 'https://master-teste.vercel.app';
+        const MASTER_URL = 'https://master-teal.vercel.app';
 
         document.addEventListener('DOMContentLoaded', async function() {
             await loadProducts();
