--- a/public/produtos/adicionarProd.html
+++ b/public/produtos/adicionarProd.html
@@ -177,7 +177,7 @@
     </main>
 
     <script>
-        const MASTER_URL = 'https://master-teste.vercel.app';
+        const MASTER_URL = 'https://master-teal.vercel.app';
 
         document.getElementById('product-form').addEventListener('submit', async function(event) {
             event.preventDefault();
