--- a/public/anuncios/index.html
+++ b/public/anuncios/index.html
@@ -24,6 +24,7 @@
   <script src="/anuncios/script.js" defer></script>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <script src="script.js" type="module"></script>
   <style>
     :root {
         --primary-color: #662d91;
