--- a/public/anuncios/index.html
+++ b/public/anuncios/index.html
@@ -326,6 +326,76 @@
         border-color: var(--primary-color);
         box-shadow: 0 0 0 2px rgba(102, 45, 145, 0.3);
     }
+
+    /* Product Grid Styles */
+    .products-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        gap: 1rem;
+        padding: 1rem;
+    }
+
+    .product-card {
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        padding: 1rem;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        background: white;
+    }
+
+    .product-card:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
+    .product-card.selected {
+        border-color: var(--primary-color);
+        background-color: rgba(102, 45, 145, 0.1);
+    }
+
+    .product-card img {
+        width: 100%;
+        height: 150px;
+        object-fit: contain;
+        margin-bottom: 1rem;
+    }
+
+    .product-info {
+        text-align: center;
+    }
+
+    .product-name {
+        font-weight: bold;
+        margin-bottom: 0.5rem;
+    }
+
+    .product-price {
+        color: var(--primary-color);
+        font-weight: bold;
+    }
+
+    /* Selected Products Preview */
+    .selected-products-preview {
+        margin-top: 1rem;
+        padding: 1rem;
+        border-top: 1px solid #ddd;
+    }
+
+    .selected-product-preview {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        padding: 0.5rem;
+        background: #f8f9fa;
+        border-radius: 4px;
+    }
+
+    .selected-product-preview img {
+        width: 50px;
+        height: 50px;
+        object-fit: contain;
+    }
   </style>
 </head>
 <body>
