--- a/public/anuncios/index.html
+++ b/public/anuncios/index.html
@@ -464,7 +464,7 @@
         <div id="twoProductsSection">
     <div class="form-section">
         <h4>Seleção de Produtos</h4>
-        <button type="button" class="btn btn-primary w-100 mb-3" data-bs-toggle="modal" data-bs-target="#productSelectionModal">
+        <button type="button" id="selectProductsBtn" class="btn btn-primary w-100 mb-3" data-bs-toggle="modal" data-bs-target="#productSelectionModal">
             <i class="bi bi-box-seam"></i> Selecionar Produtos
         </button>
 
