--- a/public/anuncios/index.html
+++ b/public/anuncios/index.html
@@ -21,16 +21,16 @@
         }
     }
   </script>
+  <script src="/anuncios/script.js" defer></script>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <script>
-    // Define MASTER_URL globally before any other scripts
-    window.MASTER_URL = 'https://master-teal.vercel.app';
-  </script>
-  <script src="script.js" defer></script>
   <style>
     :root {
         --primary-color: #662d91;
+        --primary-light: #8347af;
+        --primary-dark: #4a1d6e;
+        --secondary-color: #8347af;
+        --success-color: #28a745;
         --danger-color: #dc3545;
         --dark-bg: #1a1a1a;
         --light-bg: #f8f9fa;
@@ -86,7 +86,7 @@
     /* Seções de Formulário */
     .form-section {
         background: var(--light-bg);
-        border-radius: var (--border-radius);
+        border-radius: var(--border-radius);
         padding: var(--spacing-lg);
         margin-bottom: var(--spacing-lg);
         border: 1px solid rgba(0,0,0,0.1);
@@ -158,7 +158,7 @@
     .saved-ad-card {
         transition: transform 0.3s ease, box-shadow 0.3s ease;
         background: white;
-        border-radius: var (--border-radius);
+        border-radius: var(--border-radius);
         padding: var(--spacing-md);
         margin-bottom: var(--spacing-md);
         box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -326,76 +326,6 @@
         border-color: var(--primary-color);
         box-shadow: 0 0 0 2px rgba(102, 45, 145, 0.3);
     }
-
-    /* Product Grid Styles */
-    .products-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-        gap: 1rem;
-        padding: 1rem;
-    }
-
-    .product-card {
-        border: 1px solid #ddd;
-        border-radius: 8px;
-        padding: 1rem;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        background: white;
-    }
-
-    .product-card:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-
-    .product-card.selected {
-        border-color: var(--primary-color);
-        background-color: rgba(102, 45, 145, 0.1);
-    }
-
-    .product-card img {
-        width: 100%;
-        height: 150px;
-        object-fit: contain;
-        margin-bottom: 1rem;
-    }
-
-    .product-info {
-        text-align: center;
-    }
-
-    .product-name {
-        font-weight: bold;
-        margin-bottom: 0.5rem;
-    }
-
-    .product-price {
-        color: var(--primary-color);
-        font-weight: bold;
-    }
-
-    /* Selected Products Preview */
-    .selected-products-preview {
-        margin-top: 1rem;
-        padding: 1rem;
-        border-top: 1px solid #ddd;
-    }
-
-    .selected-product-preview {
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-        padding: 0.5rem;
-        background: #f8f9fa;
-        border-radius: 4px;
-    }
-
-    .selected-product-preview img {
-        width: 50px;
-        height: 50px;
-        object-fit: contain;
-    }
   </style>
 </head>
 <body>
@@ -462,84 +392,54 @@
         </div>
 
         <div id="twoProductsSection">
-    <div class="form-section">
-        <h4>Seleção de Produtos</h4>
-        <button type="button" id="selectProductsBtn" class="btn btn-primary w-100 mb-3" data-bs-toggle="modal" data-bs-target="#productSelectionModal">
-            <i class="bi bi-box-seam"></i> Selecionar Produtos
-        </button>
-
-        <!-- Preview dos produtos selecionados -->
-        <div class="selected-products-preview mb-4">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="selected-product-card" id="product1Preview">
-                        <div class="text-center mb-3">
-                            <img src="/default-product.png" alt="Produto 1" class="product-preview-img">
-                        </div>
-                        <h5 class="product-preview-title" id="product1Title">Produto 1 não selecionado</h5>
-                        <p class="product-preview-price" id="product1Price">R$ 0,00</p>
+            <div class="form-section">
+                <div class="product-section" data-product-number="1">
+                    <div class="product-header" onclick="toggleProduct(1)">
+                        <h4>Produto 1</h4>
+                        <i class="bi bi-chevron-down toggle-icon" id="toggle-icon-1"></i>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="selected-product-card" id="product2Preview">
-                        <div class="text-center mb-3">
-                            <img src="/default-product.png" alt="Produto 2" class="product-preview-img">
-                        </div>
-                        <h5 class="product-preview-title" id="product2Title">Produto 2 não selecionado</h5>
-                        <p class="product-preview-price" id="product2Price">R$ 0,00</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- Modal de seleção de produtos (atualizado) -->
-<div class="modal fade" id="productSelectionModal" tabindex="-1">
-    <div class="modal-dialog modal-xl modal-dialog-scrollable">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Selecionar Produtos</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-            <div class="modal-body">
-                <!-- Barra de pesquisa e filtros -->
-                <div class="row mb-4">
-                    <div class="col-md-6">
-                        <div class="input-group">
-                            <span class="input-group-text">
-                                <i class="bi bi-search"></i>
-                            </span>
-                            <input type="text" id="productSearchModal" class="form-control" placeholder="Buscar produtos...">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <select id="categoryFilterModal" class="form-select">
-                            <option value="">Todas as categorias</option>
+                    <div class="product-content" id="product-content-1">
+                        <label for="product1Search" class="control-label">Pesquisar Produto 1</label>
+                        <input type="text" id="product1Search" class="form-control" oninput="filterProducts(1)">
+                        <label for="product1Select" class="form-label mt-2">Selecione o Produto 1</label>
+                        <select id="product1Select" class="form-select" onchange="selectExistingProduct(this.value, 1)">
+                          <option value="">Selecione um produto</option>
                         </select>
+                        <label for="product1Title" class="form-label mt-2">Título do Produto 1</label>
+                        <input type="text" id="product1Title" class="form-control">
+                        <label for="product1Description" class="form-label mt-2">Descrição do Produto 1</label>
+                        <textarea id="product1Description" class="form-control" rows="2"></textarea>
+                        <label for="product1Price" class="form-label mt-2">Preço do Produto 1</label>
+                        <input type="text" id="product1Price" class="form-control">
+                        <label for="product1Image" class="form-label mt-2">Imagem do Produto 1</label>
+                        <input type="file" id="product1Image" class="form-control" data-imageUrl="">
                     </div>
                 </div>
 
-                <!-- Grid de produtos -->
-                <div class="products-grid mb-4" id="productsGridModal">
-                    <!-- Produtos serão carregados aqui -->
-                </div>
-
-                <!-- Preview dos selecionados -->
-                <div class="selected-products-preview">
-                    <h6>Produtos Selecionados:</h6>
-                    <div id="selectedProductsPreview" class="d-flex flex-wrap gap-3">
-                        <!-- Produtos selecionados serão mostrados aqui -->
+                <div class="product-section" data-product-number="2">
+                    <div class="product-header" onclick="toggleProduct(2)">
+                        <h4>Produto 2</h4>
+                        <i class="bi bi-chevron-down toggle-icon" id="toggle-icon-2"></i>
+                    </div>
+                    <div class="product-content" id="product-content-2">
+                        <label for="product2Search" class="control-label">Pesquisar Produto 2</label>
+                        <input type="text" id="product2Search" class="form-control" oninput="filterProducts(2)">
+                        <label for="product2Select" class="form-label mt-2">Selecione o Produto 2</label>
+                        <select id="product2Select" class="form-select" onchange="selectExistingProduct(this.value, 2)">
+                          <option value="">Selecione um produto</option>
+                        </select>
+                        <label for="product2Title" class="form-label mt-2">Título do Produto 2</label>
+                        <input type="text" id="product2Title" class="form-control">
+                        <label for="product2Description" class="form-label mt-2">Descrição do Produto 2</label>
+                        <textarea id="product2Description" class="form-control" rows="2"></textarea>
+                        <label for="product2Price" class="form-label mt-2">Preço do Produto 2</label>
+                        <input type="text" id="product2Price" class="form-control">
+                        <label for="product2Image" class="form-label mt-2">Imagem do Produto 2</label>
+                        <input type="file" id="product2Image" class="form-control" data-imageUrl="">
                     </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-primary" id="confirmProductSelection">Confirmar Seleção</button>
             </div>
         </div>
-    </div>
-</div>
 
         <!-- Atualizar a seção de lista de produtos -->
         <div id="productListSection" class="form-section" style="display: none;">
@@ -713,43 +613,6 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" onclick="closeAndClearModal()">Cancelar</button>
                 <button type="button" class="btn btn-primary" onclick="handleSaveAndClose()">Salvar</button>
-            </div>
-        </div>
-    </div>
-  </div>
-
-  <!-- Modal para seleção de produtos -->
-  <div class="modal fade" id="productSelectionModal" tabindex="-1" aria-labelledby="productSelectionModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="productSelectionModalLabel">Selecionar Produtos</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="row mb-3">
-                    <div class="col">
-                        <input type="text" id="productSearchModal" class="form-control" placeholder="Buscar produtos...">
-                    </div>
-                    <div class="col">
-                        <select id="categoryFilterModal" class="form-select">
-                            <option value="">Todas as categorias</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="products-grid" id="productsGridModal">
-                    <!-- Produtos serão carregados aqui -->
-                </div>
-                <div class="selected-products-preview mt-3">
-                    <h6>Produtos Selecionados:</h6>
-                    <div id="selectedProductsPreview" class="d-flex gap-2">
-                        <!-- Produtos selecionados serão mostrados aqui -->
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-primary" id="confirmProductSelection">Confirmar Seleção</button>
             </div>
         </div>
     </div>
@@ -1364,10 +1227,15 @@
     };
 </script>
 
+<!-- ...existing code... -->
+
+<!-- Remover script duplicado do final e manter apenas este -->
 <script>
     document.addEventListener('DOMContentLoaded', function() {
-        // The initialization is now handled in script.js
-        console.log('DOM loaded');
+        loadExistingProducts();
+        toggleProduct(1);
+        toggleAdType('twoProducts');
+        loadSavedAds();
     });
 </script>
 </body>
