--- a/public/anuncios/index.html
+++ b/public/anuncios/index.html
@@ -87,7 +87,7 @@
     .form-section {
         background: var(--light-bg);
         border-radius: var(--border-radius);
-        padding: var(--spacing-lg);
+        padding: var (--spacing-lg);
         margin-bottom: var(--spacing-lg);
         border: 1px solid rgba(0,0,0,0.1);
     }
@@ -333,7 +333,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <i class="bi bi-display"></i> Projeto Telao
+           <img src="/LOGO_DYP.png" alt="Logo DYP" height="30">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
