--- a/public/anuncios/index.html
+++ b/public/anuncios/index.html
@@ -197,7 +197,7 @@
         height: 150px;
         background-size: cover;
         background-position: center;
-        border-radius: var(--border-radius);
+        border-radius: var (--border-radius);
         margin-bottom: var(--spacing-sm);
     }
 
@@ -605,6 +605,43 @@
       </div>
     </div>
   </div>
+
+<!-- Atualizar o modal de seleção de produtos -->
+<div class="modal fade" id="productSelectionModal" tabindex="-1" aria-labelledby="productSelectionModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="productSelectionModalLabel">Escolher Produtos (selecione 2)</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row mb-3">
+                    <div class="col">
+                        <div class="input-group">
+                            <span class="input-group-text">
+                                <i class="bi bi-search"></i>
+                            </span>
+                            <input type="text" id="searchByCategory" class="form-control" 
+                                   placeholder="Pesquisar por categoria ou nome do produto...">
+                        </div>
+                    </div>
+                </div>
+                <div id="productsListContainer">
+                    <!-- Produtos serão carregados aqui -->
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="selected-count me-auto">
+                    Produtos selecionados: <span id="selectedCount">0</span>/2
+                </div>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" onclick="confirmProductSelection()">
+                    Confirmar Seleção
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
