--- a/public/anuncios/index.html
+++ b/public/anuncios/index.html
@@ -648,9 +648,8 @@
     </div>
 </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
-        crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/anuncios/script.js"></script>
   <script>
     // Remove the MASTER_URL declaration from here since it's already in script.js
     
