--- a/public/anuncios/index.html
+++ b/public/anuncios/index.html
@@ -590,17 +590,12 @@
             </div>
             <div class="modal-body">
                 <div class="row mb-3">
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" id="searchByCategory" 
-                               placeholder="Pesquisar produtos...">
-                    </div>
-                    <div class="col-md-6">
-                        <select class="form-select" id="categorySelect">
-                            <option value="all">Todas as Categorias</option>
-                        </select>
+                    <div class="col-12">
+                        <input type="text" class="form-control" id="productSearchInput" 
+                               placeholder="Pesquisar produtos por nome ou preço...">
                     </div>
                 </div>
-                <div id="productsListContainer" class="row">
+                <div id="productsListContainer" class="row g-3">
                     <!-- Products will be loaded here -->
                 </div>
             </div>
