--- a/public/anuncios/index.html
+++ b/public/anuncios/index.html
@@ -1311,5 +1311,14 @@
         loadSavedAds();
     });
 </script>
+
+<!-- ...existing code... -->
+<input id="searchByCategory" type="text" placeholder="Filtrar por categoria" />
+<button id="confirmSelection">Confirmar seleção</button>
+<div id="product-content-1" style="display:none;"></div>
+<div id="toggle-icon-1"></div>
+<!-- Container for product list -->
+<div id="productsListContainer"></div>
+<!-- ...existing code... -->
 </body>
 </html>
