--- a/public/anuncios/index.html
+++ b/public/anuncios/index.html
@@ -182,7 +182,7 @@
 
     .saved-ad-buttons {
         display: flex;
-        gap: var(--spacing-sm);
+        gap: var (--spacing-sm);
         margin-top: var(--spacing-sm);
     }
 
@@ -1298,45 +1298,21 @@
 
 <!-- ...existing code... -->
 
-<!-- Remove script tag that redeclares MASTER_URL -->
+<!-- Remover script inline que redefine MASTER_URL -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/anuncios/script.js"></script>
+
+<!-- Simplificar a inicialização -->
 <script>
     document.addEventListener('DOMContentLoaded', function() {
-        // Don't call functions directly, wait for master script to initialize
-        if (window.loadExistingProducts) {
-            loadExistingProducts();
-        }
-        if (window.toggleProduct) {
-            toggleProduct(1);
-        }
+        // Inicializar apenas se as funções existirem
         if (window.toggleAdType) {
-            toggleAdType('twoProducts');
+            window.toggleAdType('twoProducts');
         }
         if (window.loadSavedAds) {
-            loadSavedAds();
+            window.loadSavedAds();
         }
     });
 </script>
-
-<!-- ...existing code... -->
-
-<!-- Move these elements inside the form section where they belong -->
-<div id="twoProductsSection" class="form-section">
-    <input id="searchByCategory" type="text" placeholder="Filtrar por categoria" class="form-control mb-3" />
-    <button id="confirmSelection" class="btn btn-primary">Confirmar seleção</button>
-    <div id="product-content-1" style="display:none;"></div>
-    <div id="toggle-icon-1"></div>
-    <div id="productsListContainer" class="mt-3">
-        <!-- Products will be loaded here -->
-    </div>
-</div>
-
-<!-- ...existing code... -->
-<input id="searchByCategory" type="text" placeholder="Filtrar por categoria" />
-<button id="confirmSelection">Confirmar seleção</button>
-<div id="product-content-1" style="display:none;"></div>
-<div id="toggle-icon-1"></div>
-<!-- Container for product list -->
-<div id="productsListContainer"></div>
-<!-- ...existing code... -->
 </body>
 </html>
